<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorBackgound"
    tools:context="com.example.administrator.moran.ui.activity.SignActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signin"
        >

        <LinearLayout
            android:id="@+id/signin_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/logo_container_height"
                android:background="@color/colorOrange"
                >

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:src="@drawable/sign_logo2"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/sign_vertical_padding"
                android:paddingRight="@dimen/sign_vertical_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="@dimen/sign_vertical_margin"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/sign_text_size"
                    android:textColor="@color/colorGrey"
                    android:text="@string/prompt_email"
                    />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_view_height"
                    android:paddingLeft="5dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/text_shape"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_vertical_margin"
                    android:layout_marginBottom="@dimen/sign_vertical_margin"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/sign_text_size"
                    android:textColor="@color/colorGrey"
                    android:text="@string/prompt_password"
                    />
                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_view_height"
                    android:paddingLeft="5dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/text_shape"
                    />
                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_view_height"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_shape"
                    />
                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="@dimen/sign_view_height"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/sign_text_size"
                    android:textColor="@color/colorGrey"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </LinearLayout>

        </LinearLayout>



    </ScrollView>


</LinearLayout>
